# chembl-tasks-for-finetuning

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.sh  test.py
data/: selected_standard_type_directions.csv
scripts/: 00_get_assay_data_from_chembl.py  01_get_target_data_from_chembl.py  02_calculate_descriptors.py  03_estimate_performance.py  04_get_assay_has_target_from_chembl.py  05_sort_tasks.py  06_available_tasks_per_parameter_configuration.py
src/chembltasks/: __init__.py  tasker.py
